[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "do-py"
version = "0.4.1"
description = "Data validation and standardization library wrapping Python dictionaries."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tim Davis", email = "timdavis.3991@gmail.com" }]
requires-python = ">=3.10"
dependencies = []
keywords = ["development", "OO"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/do-py-together/do-py"
Repository = "https://github.com/do-py-together/do-py"
Issues = "https://github.com/do-py-together/do-py/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-forked>=1.6",
    "pytest-timeout>=2",
    "pytest-xdist>=3",
    "coverage>=7",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["do_py"]

[tool.hatch.build.targets.sdist]
include = [
    "/do_py",
    "/README.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-so xfail_strict=True --durations 10 --maxfail 10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Sensible default lint set without being too aggressive on a legacy
# codebase. Phase 6 will broaden this and add type annotations.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = [
    "E501",   # line-too-long — line-length is advisory; long docstrings/URLs happen
    "E721",   # use isinstance() — DataObject intentionally uses `type(x) is T` for strict (non-subtype) checks
    "E731",   # lambda assignment — a couple of intentional usages; Phase 6 will revisit
    "B006",   # mutable default args — 2 real but non-urgent cases (deepcopy memodict); Phase 6
    "B008",   # function call in argument default — false positive heavy for dataclass-like APIs
    "B904",   # use `raise X from Y` — broader exception handling cleanup in Phase 6
    "B905",   # zip without strict=  — needs domain review; Phase 6
    "UP031",  # printf-style formatting — pervasive in error-message templates; converting changes deferred-
              # formatting semantics. Phase 6.
    "UP008",  # super() without args — NOT safe on this codebase. The @ABCRestrictions.require decorator
              # rebuilds decorated classes via `meta(name, bases, namespace)`, which copies methods from
              # the original class's dict. Methods' implicit __class__ cell still references the ORIGINAL
              # (now orphaned) class, so bare super() fails with TypeError. Explicit super(X, self) works
              # because X is resolved at call time via module lookup.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B011",  # `assert False` is idiomatic in some test patterns here
]

[tool.ruff.lint.isort]
known-first-party = ["do_py"]

[tool.coverage.run]
source = ["do_py"]
omit = [
    "tests/*",
    "tests/**",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
